--- a/style.css
+++ b/style.css
@@ -3,16 +3,20 @@
 body {
   font-family: helvetica, arial, sans-serif;
   margin: 2em;
-  background-color: slategrey;
+  background: linear-gradient(#e66465, #9198e5);
   color: white;
 }
 
 h1 {
   font-family: verdana, arial, sans-serif;
+  text-align: center;
 }
 button {
   padding: 10px;
   border-radius: 10px;
+  margin-right: 2%;
+  margin-top: 2%;
+  
 }
 .hidden{
   display: none;
@@ -42,7 +46,20 @@ button {
 #button4:active, #button4.lit{
   background:yellow;
 }
+#button5{
+  background: orchid;
+}
+#button5:active, #button5.lit{
+  background:darkmagenta;
+}
+#button6{
+  background: sandybrown;
+}
+#button6:active, #button6.lit{
+  background: sienna;
+}
 #gameButtonArea > button{
+  
   width: 200px;
   height: 200px;
   margin 2px;
